--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -16,3 +16,14 @@ page {
   // 修改按钮背景色
   // --wot-button-primary-bg-color: green;
 }
+
+// 修改导航栏边框
+.wd-navbar.navbar.is-border::after {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 0;
+  height: 0;
+  left: 0;
+  bottom: 0;
+}
