fix: 权限提示信息

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -78,3 +78,11 @@ scroll-view ::-webkit-scrollbar {
   height: 0 !important;
   overflow: hidden !important;
 }
+
+.fg-drop-menu {
+  .wd-drop-menu__list {
+    background-color: unset !important;
+    font-size: 28rpx;
+    font-weight: bold;
+  }
+}
